fix auction card missalignment

--- a/gablum-webapp/src/main/resources/frontend/src/app/auction/auction-card/auction-card.component.css
+++ b/gablum-webapp/src/main/resources/frontend/src/app/auction/auction-card/auction-card.component.css
@@ -5,7 +5,7 @@
 }
 
 .proposal-card {
-  height: 22em;
+  height: 20em;
   border-radius: 0.4em;
   overflow: hidden;
   background: white;
